[ADD] fixing hovering/touch on mobile and now svg buttons

--- a/javascript/css/style-desktop.css
+++ b/javascript/css/style-desktop.css
@@ -261,3 +261,8 @@
 		{
 			color: #8d9ca3;
 		}
+
+/* IO HAVOC Buttons 	
+.btn:hover {
+} */
+			
