--- a/javascript/css/style.css
+++ b/javascript/css/style.css
@@ -596,15 +596,17 @@
 		  
 		  width: 60px;
     	  height: 60px;
-		  background:url('images/reload.png') no-repeat center;
+		  background: url('images/iconmonstr-refresh-3-icon.svg') no-repeat center;
+  		  background-size: 62px 62px;
+  
 		   opacity: 0.75;
 		   filter: alpha(opacity=75); /* For IE8 and earlier */
 		}
-
+		
 		.btn:hover {
-			background:url('images/reload-hover.png') no-repeat center;
+			background: url('images/iconmonstr-refresh-3-icon.svg') no-repeat center;
+  		    background-size: 61px 61px;
 		}
-			
 			
 	/* Posts */
 
